--- a/exercise04.tex
+++ b/exercise04.tex
@@ -437,14 +437,14 @@
     \newpage
     \begin{figure}[H] 
     \begin{center}
-%     \subfigure[]{\includegraphics[width=8cm, height=6cm]{Upwind_Profile}}
-%     \subfigure[]{\includegraphics[width=8cm, height=6cm]{Lax-Friedrichs_Profile}}
-%     \subfigure[]{\includegraphics[width=8cm, height=6cm]{Lax-Wendroff_Profile}}
-%     \subfigure[]{\includegraphics[width=8cm, height=6cm]{Beam-Warming_Profile}}
-%     {\includegraphics[width=8cm, height=6cm]{Upwind_Profile}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Lax-Friedrichs_Profile}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Lax-Wendroff_Profile}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Beam-Warming_Profile}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
+    \subfigure[]{\includegraphics[width=8cm, height=6cm]{figures04/Upwind_Profile}}
+    \subfigure[]{\includegraphics[width=8cm, height=6cm]{figures04/Lax-Friedrichs_Profile}}
+    \subfigure[]{\includegraphics[width=8cm, height=6cm]{figures04/Lax-Wendroff_Profile}}
+    \subfigure[]{\includegraphics[width=8cm, height=6cm]{figures04/Beam-Warming_Profile}}
+    {\includegraphics[width=8cm, height=6cm]{figures04/Upwind_Profile}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Lax-Friedrichs_Profile}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Lax-Wendroff_Profile}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Beam-Warming_Profile}} 
     \caption{ The analytical solution and the numerical solution $u(x,t=0.5)$ for the advection equation on Riemann initial data with $a=1$, $h=0.005$, $\frac{k}{h}=0.5$.} 
     \end{center}
     \end{figure}
@@ -453,10 +453,10 @@
     
     \begin{figure}[H] 
     \begin{center}
-%     {\includegraphics[width=8cm, height=6cm]{Upwind_Accuracy}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Lax-Friedrichs_Accuracy}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Lax-Wendroff_Accuracy}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
-%     {\includegraphics[width=8cm, height=6cm]{Beam-Warming_Accuracy}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
+    {\includegraphics[width=8cm, height=6cm]{figures04/Upwind_Accuracy}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Lax-Friedrichs_Accuracy}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Lax-Wendroff_Accuracy}} 
+    {\includegraphics[width=8cm, height=6cm]{figures04/Beam-Warming_Accuracy}} 
     \caption{ The error as a function of resolution. The error is measured in 1-norm, the resolution is measured as the number of discretization points in the x dimension. }
     \end{center}
     \end{figure}
