--- a/exercise02.tex
+++ b/exercise02.tex
@@ -32,8 +32,8 @@
 
 \usepackage{comment}
 % Switch between showing and hiding solutions by commenting out either of the following lines
-\newenvironment{solution}{\begin{mysolution}}{\end{mysolution}}
-% \excludecomment{solution}
+% \newenvironment{solution}{\begin{mysolution}}{\end{mysolution}}
+\excludecomment{solution}
 
 
 
