--- a/exercise01.tex
+++ b/exercise01.tex
@@ -33,9 +33,9 @@
 
 \usepackage{comment}
 % Switch between showing and hiding solutions by commenting out either of the following lines
-\newenvironment{solution}{\begin{mysolution}}{\end{mysolution}} 
-\newenvironment{solutioninformation}{\begin{mysolutioninformation}}{\end{mysolutioninformation}}
-%\excludecomment{solution}\excludecomment{solutioninformation}
+%\newenvironment{solution}{\begin{mysolution}}{\end{mysolution}} 
+%\newenvironment{solutioninformation}{\begin{mysolutioninformation}}{\end{mysolutioninformation}}
+\excludecomment{solution}\excludecomment{solutioninformation}
 
 
 
